Zip Archiver: mark Drive cache file as mounted.

This will protect mounted zip file caches from the disk cleanup logic.

Bug: 816928
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I73d36a2317d643fdbbc74c342960b027b99dddb0
Reviewed-on: https://chromium-review.googlesource.com/940645
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540778}
Former-commit-id: 533c62725be56fe49be4ab548e7dd7061b1c977c